# password-manager-backend

./: .gitignore  CNAME  alembic.ini  angular.json  capacitor.config.json  package-lock.json  package.json  proxy.conf.json  pyproject.toml  tailwind.config.js  test.html  tsconfig.app.json  tsconfig.spec.json
.github/workflows/: deploy-pages.yml  release-electron.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
docker/: Dockerfile  entrypoint.sh
electron/: main.js  preload.js
public/: manifest.webmanifest
src/backend/: main.py  settings.py  test.py
src/backend/database/: __init__.py  connection.py  orm.py
src/backend/database/dao/: __init__.py  base.py  data.py  users.py
src/backend/database/migrations/: env.py
src/backend/database/migrations/versions/: 0fb6ac11c1d2_add_device_resume_tokens.py  13f4a7c8d9e0_add_user_profile_fields.py  1c2d3e4f5a6b_add_data_types_and_fields_tables.py  (+3 more)
src/backend/database/models/: __init__.py  data.py  users.py
src/backend/routers/: __init__.py  auth.py  depends.py
src/backend/routers/auth/: __init__.py  models.py  router.py
src/backend/routers/data/: __init__.py  models.py  router.py
src/backend/utils/: __init__.py  crypto.py  discord.py  jwt_manager.py
src/frontend/: index.html  styles.scss
src/frontend/app/: app.config.ts  app.routes.ts  app.ts
src/frontend/app/services/: api.ts  client-encryption.ts  crypto.ts  login_fsm.ts  models.ts  user.ts
src/frontend/environments/: environment.electron.ts  environment.prod.ts  environment.ts
src/frontend/types/: argon2-bundled.d.ts
(+40 files in other folders)
