[project]
name = "password-manager-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "nehamori",email = "you@example.com"}
]
requires-python = "~3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "sqlalchemy[asyncio] (>=2.0.48,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "aiogram (>=3.26.0,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
]
packages = [
    { include = "*", from = "src/backend" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false